Simplified search logic; fixed bug where evolution Pokémon were incorrectly added to visiblePokemon. Now, isEvolutionComplete ensures missing evolution data is loaded only into detailCards.

--- a/style.css
+++ b/style.css
@@ -145,6 +145,17 @@ nav {
     .arrow-left {
         right: -60px !important;
     }
+
+}
+
+@media (max-width: 490px) {
+    .arrow-right {
+        left: -45px;
+    }
+
+    .arrow-left {
+        right: -45px;
+    }
 }
 
 
